- Fixed incorrect treatment of functions containing LOOKUP/LOOKDOWN
- Improved stack handling in COG functions
- Implemented default parameter values for C
- Accept ORG/END as well as ASM/ENDASM for inline assembly in Spin2
- Accept "foo.bar" notation for constants as well as "foo#bar"
- Accept BYTE, WORD, LONG modifiers for Spin local variables
- Added some more simpletools functions
- Added many P2 smartpin constants
- Began work on stdio functions

Version 4.1.3
- Allow const qualifier for inline assembly

Version 4.1.2
- Fixed "backwards" case ranges in Spin
- Fixed _rev() operator in C propeller2.h file for P2
- Suppressed removal of unused methods when optimization is turned off
- Used JMPREL to implement case_fast in P2
- Started porting simpletools
- Improved messages about const assignment
- Allow strings in BASIC const declarations
- In C++ class declarations make variables private by default
- Improved some error messages about array declarations

Version 4.1.1
- Fixed Spin REV operator to match PNut's Spin2 definition.
- Optimize some P2 moves into BMASK or DECOD instructions
- Allow the word "asm" to be used as a label in Spin
- Allow use of _ in integers in BASIC DATA/READ

Version 4.1.0
- Added BYREF and BYVAL modifiers to BASIC function parameters
- Added ANDALSO and ORELSE operators to BASIC
- Added +=, -=, *=, /=, AND=, OR=, XOR= assignment operators to BASIC
- Added BIN$, OCT$, and HEX$ builtin functions to BASIC
- Added standard Spin2 functions WRPIN, WXPIN, WYPIN, RDPIN, etc. to Spin and BASIC.
- Added [] pointer dereference operator for FreeBasic compatibility.
- Added exponentiation operator ^ to BASIC
- Added a number of other new builtin functions to BASIC, courtesy of Jeff Roark (see include/libsys/stringlibp2.bas)
- Allowed multiple assignment and functions which return multiple values in BASIC
- Cleaned up -w output a bit for P2
- Implemented _ for skipping assignments in multiple assignments