@@ -10,6 +10,7 @@ Version 4.1.4
 - Accept ORG/END as well as ASM/ENDASM for inline assembly in Spin2
 - Accept "foo.bar" notation for constants as well as "foo#bar"
 - Accept BYTE, WORD, LONG modifiers for Spin local variables
+- Accept some uses of $ in inline assembly
 - Added some more simpletools functions
 - Added many P2 smartpin constants
 - Began work on stdio functions
